Start fixing CSS... I hate CSS

--- a/index.html
+++ b/index.html
@@ -3,14 +3,10 @@ layout: default
 title: Codex
 ---
 
-<h1>Codex</h1>
+<section>
 
-<ul>
-    {% for item in site.data.navigation %}
-    <li>
-        <a href="{{ item.link }}" {% if page.url == item.link %}style="color: red;"{% endif %}>
-            {{ item.name }}
-        </a>
-    </li>
-  {% endfor %}
-</ul>
+    <h1>Codex</h1>
+
+    <h5>Hello World</h5>
+
+</section>
