--- a/contact.html
+++ b/contact.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Box personal portfolio Template</title>
-    <link rel="icon" href="img/fav.png" type="image/x-icon">
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="ionicons/css/ionicons.min.css" rel="stylesheet">
+    <link rel="icon" href="img/fav.png" type="image/x-icon">
 
     <!-- main css -->
     <link href="css/style.css" rel="stylesheet">
@@ -51,6 +51,7 @@
             <a class="box-primary-nav-trigger" href="#0">
                 <span class="box-menu-text">Menu</span><span class="box-menu-icon"></span>
             </a>
+            <!-- box-primary-nav-trigger -->
         </header>
         <!-- end box-header -->
 
@@ -60,10 +61,12 @@
                 <li class="box-label">About me</li>
 
                 <li><a href="index.html">Intro</a></li>
-                <li><a href="about.html">About me</a> <i class="ion-ios-circle-filled color"></i></li>
+                <li><a href="about.html">About me</a></li>
                 <li><a href="services.html">services</a></li>
                 <li><a href="portfolio.html">portfolio</a></li>
-                <li><a href="contact.html">contact me</a></li>
+                <li><a href="contact.html">contact me</a> <i class="ion-ios-circle-filled color"></i></li>
+
+
 
                 <li class="box-label">Follow me</li>
 
@@ -74,40 +77,66 @@
             </ul>
         </nav>
         <!-- end nav -->
+
     </div>
 
-    <!-- Top bar -->
+    <!-- top bar -->
     <div class="top-bar">
-        <h1>About Me</h1>
-        <p><a href="#">Home</a> / About me</p>
+        <h1>contact Me</h1>
+        <p><a href="#">Home</a> / Contact Me</p>
     </div>
-    <!-- end Top bar -->
+    <!-- end top bar -->
 
-    <!-- Main container -->
-    <div class="container main-container clearfix">
+    <!-- main-container -->
+    <div class="container main-container">
         <div class="col-md-6">
-            <img src="img/02.jpg" class="img-responsive" alt="" />
+            <form action="#" method="post">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="input-contact">
+                            <input type="text" name="name">
+                            <span>your name</span>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="input-contact">
+                            <input type="text" name="email">
+                            <span>your email</span>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="input-contact">
+                            <input type="text" name="object">
+                            <span>object</span>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="textarea-contact">
+                            <textarea name="message"></textarea>
+                            <span>message</span>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <a href="#" class="btn btn-box">Send</a>
+                    </div>
+                </div>
+            </form>
         </div>
+
         <div class="col-md-6">
-            <h3 class="uppercase">About Me </h3>
+            <h3 class="text-uppercase">contact me</h3>
             <h5>Creative & Lorem ipsum dolor sit amet</h5>
             <div class="h-30"></div>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliter enim nosmet ipsos nosse non possumus. Inscite autem medicinae et gubernationis ultimum cum ultimo sapientiae comparatur. Tecum optime, deinde etiam cum mediocri amico. Et nemo nimium beatus est; Ac ne plura complectar-sunt enim innumerabilia-, bene laudata virtus voluptatis aditus </p>
-
-            <p>Tum ille: Tu autem cum ipse tantum librorum habeas, quos hic tandem requiris? Esse enim quam vellet iniquus iustus poterat inpune. </p>
-            <div class="h-10"></div>
-            <ul class="social-ul">
-                <li class="box-social"><a href="#0"><i class="ion-social-facebook"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-instagram-outline"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-twitter"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-dribbble"></i></a></li>
-            </ul>
-
-
+            <div class="contact-info">
+                <p><i class="ion-android-call"></i> 0100 787 3456</p>
+                <p><i class="ion-ios-email"></i> box@info.com</p>
+            </div>
         </div>
-    </div>
-    <!-- end Main container -->
 
+
+    </div>
+    <!-- end main-container -->
 
     <!-- footer -->
     <footer>
