--- a/services.html
+++ b/services.html
@@ -42,7 +42,7 @@
     <!-- end Preloader -->
 
     <div class="container-fluid">
-        <!-- box-header -->
+        <!-- box header -->
         <header class="box-header">
             <div class="box-logo">
                 <a href="index.html"><img src="img/logo.png" width="80" alt="Logo"></a>
@@ -51,8 +51,9 @@
             <a class="box-primary-nav-trigger" href="#0">
                 <span class="box-menu-text">Menu</span><span class="box-menu-icon"></span>
             </a>
+            <!-- box-primary-nav-trigger -->
         </header>
-        <!-- end box-header -->
+        <!-- end box header -->
 
         <!-- nav -->
         <nav>
@@ -60,10 +61,12 @@
                 <li class="box-label">About me</li>
 
                 <li><a href="index.html">Intro</a></li>
-                <li><a href="about.html">About me</a> <i class="ion-ios-circle-filled color"></i></li>
-                <li><a href="services.html">services</a></li>
+                <li><a href="about.html">About me</a></li>
+                <li><a href="services.html">services</a> <i class="ion-ios-circle-filled color"></i></li>
                 <li><a href="portfolio.html">portfolio</a></li>
                 <li><a href="contact.html">contact me</a></li>
+
+
 
                 <li class="box-label">Follow me</li>
 
@@ -76,37 +79,72 @@
         <!-- end nav -->
     </div>
 
-    <!-- Top bar -->
+    <!-- top bar -->
     <div class="top-bar">
-        <h1>About Me</h1>
-        <p><a href="#">Home</a> / About me</p>
+        <h1>services</h1>
+        <p><a href="#">Home</a> / Services</p>
     </div>
-    <!-- end Top bar -->
+    <!-- end top bar -->
 
-    <!-- Main container -->
-    <div class="container main-container clearfix">
-        <div class="col-md-6">
-            <img src="img/02.jpg" class="img-responsive" alt="" />
-        </div>
-        <div class="col-md-6">
-            <h3 class="uppercase">About Me </h3>
-            <h5>Creative & Lorem ipsum dolor sit amet</h5>
-            <div class="h-30"></div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliter enim nosmet ipsos nosse non possumus. Inscite autem medicinae et gubernationis ultimum cum ultimo sapientiae comparatur. Tecum optime, deinde etiam cum mediocri amico. Et nemo nimium beatus est; Ac ne plura complectar-sunt enim innumerabilia-, bene laudata virtus voluptatis aditus </p>
+    <div class="container main-container">
+        <div class="clearfix">
 
-            <p>Tum ille: Tu autem cum ipse tantum librorum habeas, quos hic tandem requiris? Esse enim quam vellet iniquus iustus poterat inpune. </p>
-            <div class="h-10"></div>
-            <ul class="social-ul">
-                <li class="box-social"><a href="#0"><i class="ion-social-facebook"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-instagram-outline"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-twitter"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-dribbble"></i></a></li>
-            </ul>
+            <!-- service-box -->
+            <div class="col-md-4 service-box">
+                <i class="ion-android-favorite-outline size-50"></i>
+                <h3>Responsive Design</h3>
+                <div class="h-10"></div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliter enim nosmet ipsos nosse non possumus. Inscite autem medicinae </p>
+            </div>
+            <!-- end service-box -->
 
+            <!-- service-box -->
+            <div class="col-md-4 service-box">
+                <i class="ion-android-options size-50"></i>
+                <h3>Easy Customization</h3>
+                <div class="h-10"></div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliter enim nosmet ipsos nosse non possumus. Inscite autem medicinae </p>
+            </div>
+            <!-- end service-box -->
+
+            <!-- service-box -->
+            <div class="col-md-4  service-box">
+                <i class="ion-android-checkmark-circle size-50"></i>
+                <h3>Creative Design</h3>
+                <div class="h-10"></div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliter enim nosmet ipsos nosse non possumus. Inscite autem medicinae </p>
+            </div>
+            <!-- end service-box -->
+
+            <!-- service-box -->
+            <div class="col-md-4  service-box">
+                <i class="ion-ios-pulse-strong size-50"></i>
+                <h3>user friendly</h3>
+                <div class="h-10"></div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliter enim nosmet ipsos nosse non possumus. Inscite autem medicinae </p>
+            </div>
+            <!-- end service-box -->
+
+            <!-- service-box -->
+            <div class="col-md-4  service-box">
+                <i class="ion-earth size-50"></i>
+                <h3>fully customizible</h3>
+                <div class="h-10"></div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliter enim nosmet ipsos nosse non possumus. Inscite autem medicinae </p>
+            </div>
+            <!-- end service-box -->
+
+            <!-- service-box -->
+            <div class="col-md-4  service-box">
+                <i class="ion-speedometer size-50"></i>
+                <h3>retina ready</h3>
+                <div class="h-10"></div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliter enim nosmet ipsos nosse non possumus. Inscite autem medicinae </p>
+            </div>
+            <!-- end service-box -->
 
         </div>
     </div>
-    <!-- end Main container -->
 
 
     <!-- footer -->
